fix: footer overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,6 @@
 }
 
 :root {
-  --footer-size: 24px;
   font-family: Fredoka One, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --accent-color: var(--ctp-mocha-pink);
   --accent-color-secondary: var(--ctp-mocha-red);
@@ -27,6 +26,9 @@
 }
 
 body {
+  display: table;
+  width: 100%;
+  min-height: 100vh;
   background-color: var(--ctp-mocha-base);
 }
 
@@ -209,10 +211,19 @@ body {
   color: var(--ctp-mocha-teal) !important;
 }
 
+.content {
+  display: table-row;
+  height: 100%;
+}
+
+/* if the window is too small, the footer overlaps the content */
 footer {
-  position: absolute;
-  bottom: 0px;
+  display: table-row;
   width: 100%;
+}
+
+footer > .boxes {
+  margin-top: 2px;
 }
 
 hr {
